Support default properties for inner values for things like text
Now you can do <Button ...>Increment</Button> instead of <Button Text="Increment" ... />.

Fixes #27

--- a/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo/About.razor
+++ b/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo/About.razor
@@ -17,9 +17,9 @@
                 <FormattedText>
                     <FormattedString>
                         <Spans>
-                            <Span Text="AppName" FontAttributes="FontAttributes.Bold" FontSize="22" />
-                            <Span Text=" " />
-                            <Span Text="1.0" TextColor="lightTextColor" />
+                            <Span FontAttributes="FontAttributes.Bold" FontSize="22">AppName</Span>
+                            <Span> </Span>
+                            <Span TextColor="lightTextColor">1.0</Span>
                         </Spans>
                     </FormattedString>
                 </FormattedText>
@@ -28,10 +28,9 @@
                 <FormattedText>
                     <FormattedString>
                         <Spans>
-                            <Span Text="This app is written in C# and native APIs using the" />
-                            <Span Text=" " />
-                            <Span Text="Xamarin Platform" FontAttributes="FontAttributes.Bold" />
-                            <Span Text="." />
+                            <Span>This app is written in C# and native APIs using the </Span>
+                            <Span FontAttributes="FontAttributes.Bold">Xamarin Platform</Span>
+                            <Span>.</Span>
                         </Spans>
                     </FormattedString>
                 </FormattedText>
@@ -40,19 +39,18 @@
                 <FormattedText>
                     <FormattedString>
                         <Spans>
-                            <Span Text="It shares code with its" />
-                            <Span Text=" " />
-                            <Span Text="iOS, Android, and Windows" FontAttributes="FontAttributes.Bold" />
-                            <Span Text=" " />
-                            <Span Text="versions." />
+                            <Span>It shares code with its </Span>
+                            <Span FontAttributes="FontAttributes.Bold">iOS, Android, and Windows</Span>
+                            <Span> versions.</Span>
                         </Spans>
                     </FormattedString>
                 </FormattedText>
             </Label>
-            <Button Text="Learn more"
-                    OnClick="OpenWeb"
+            <Button OnClick="OpenWeb"
                     BackgroundColor="primaryColor"
-                    TextColor="Color.White" />
+                    TextColor="Color.White">
+                Learn more
+            </Button>
         </StackLayout>
     </ScrollView>
 </StackLayout>
