Update samples to use new startup pattern
Fixes #82

--- a/samples/MobileBlazorBindingsWeather/MobileBlazorBindingsWeather/WeatherApp.razor
+++ b/samples/MobileBlazorBindingsWeather/MobileBlazorBindingsWeather/WeatherApp.razor
@@ -1,6 +1,6 @@
 ﻿@inject WeatherService WeatherService
 
-<ContentPage>
+<ContentView>
     <StyleSheet Resource="WeatherStyles.css" Assembly="GetType().Assembly"></StyleSheet>
     <PancakeView BackgroundGradientStartColor="BackgroundColorConverter.GetColor(CurrentWeather.Temperature, isStart: true)"
                  BackgroundGradientEndColor="BackgroundColorConverter.GetColor(CurrentWeather.Temperature, isStart: false)">
@@ -105,7 +105,7 @@
             </Contents>
         </Grid>
     </PancakeView>
-</ContentPage>
+</ContentView>
 
 @code
 {
