--- a/sample/MyApplication/HelloWorld.razor
+++ b/sample/MyApplication/HelloWorld.razor
@@ -5,7 +5,7 @@
 
         <Counter />
 
-        <WebView Source=@(new HtmlWebViewSource { Html = htmlSource }) OnWebMessageReceived="HandleWebMessage" />
+        <WebView Source=@(new HtmlWebViewSource { Html = htmlSource }) OnWebMessageReceived="HandleWebMessage" @ref="myWebView" />
 
         <WebView Source=@(new UrlWebViewSource { Url = "https://en.wikipedia.org/wiki/HTML" }) VerticalOptions="LayoutOptions.FillAndExpand" />
 
@@ -15,6 +15,8 @@
 
 @code {
     int count;
+
+    BlazorDesktop.Components.WebView myWebView;
 
     string htmlSource = @"<html><body>
         <p>Welcome to WebView.</p>
@@ -30,5 +32,6 @@
     void HandleWebMessage(string data)
     {
         count++;
+        myWebView.SendMessage($"Received: {data}");
     }
 }
