Move index.html to user-editable file

--- a/sample/MyApplication/HelloWorld.razor
+++ b/sample/MyApplication/HelloWorld.razor
@@ -17,9 +17,7 @@
         </BlazorWebView>
         *@
 
-        <BlazorWebView VerticalOptions="LayoutOptions.FillAndExpand">
-            <link rel="stylesheet" href="WebUI/wwwroot/css/bootstrap/bootstrap.min.css" />
-            <link rel="stylesheet" href="WebUI/wwwroot/css/app.css" />
+        <BlazorWebView ContentRoot="WebUI/wwwroot" VerticalOptions="LayoutOptions.FillAndExpand">
             <MyApplication.WebUI.App />
         </BlazorWebView>
 
