Demonstrate shared and synchronized state

--- a/sample/MyApplication/HelloWorld.razor
+++ b/sample/MyApplication/HelloWorld.razor
@@ -1,20 +1,23 @@
-﻿<ContentView>
+﻿@inject CounterState CounterState
+@implements IDisposable
+
+<ContentView>
     <StackLayout>
         <StackLayout Margin="new Thickness(20)" Orientation="StackOrientation.Horizontal">
-            <Label Text="@($"Hello, World! {count}")" FontSize="40" HorizontalOptions="LayoutOptions.StartAndExpand" />
-            <Button Text="Increment" OnClick="@IncrementCount" VerticalOptions="LayoutOptions.Center" Padding="10" />
+            <Label Text="@($"Hello, World! {CounterState.CurrentCount}")" FontSize="40" HorizontalOptions="LayoutOptions.StartAndExpand" />
+            <Button Text="Increment" OnClick="@CounterState.IncrementCount" VerticalOptions="LayoutOptions.Center" Padding="10" />
         </StackLayout>
 
         @*
-        <WebView Source=@(new HtmlWebViewSource { Html = htmlSource }) OnWebMessageReceived="HandleWebMessage" @ref="myWebView" />
+            <WebView Source=@(new HtmlWebViewSource { Html = htmlSource }) OnWebMessageReceived="HandleWebMessage" @ref="myWebView" />
 
-        <WebView Source=@(new UrlWebViewSource { Url = "https://en.wikipedia.org/wiki/HTML" }) VerticalOptions="LayoutOptions.FillAndExpand" />
+            <WebView Source=@(new UrlWebViewSource { Url = "https://en.wikipedia.org/wiki/HTML" }) VerticalOptions="LayoutOptions.FillAndExpand" />
 
-        <BlazorWebView>
-            <h1>Web content [@count]</h1>
-            <p>This is web within native, all Blazor</p>
-            <button @onclick="@IncrementCount">Increment</button>
-        </BlazorWebView>
+            <BlazorWebView>
+                <h1>Web content [@count]</h1>
+                <p>This is web within native, all Blazor</p>
+                <button @onclick="@IncrementCount">Increment</button>
+            </BlazorWebView>
         *@
 
         <BlazorWebView ContentRoot="WebUI/wwwroot" VerticalOptions="LayoutOptions.FillAndExpand">
@@ -26,20 +29,30 @@
 
 
 @code {
+    protected override void OnInitialized()
+    {
+        CounterState.StateChanged += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        CounterState.StateChanged -= StateHasChanged;
+    }
+
     int count;
 
     BlazorDesktop.Components.WebView myWebView;
 
     string htmlSource = @"<html><body>
-        <p>Welcome to WebView.</p>
-        <button onclick=""window.external.sendMessage('blah😋')"">Invoke .NET</button>
-        <script>
-            window.external.receiveMessage(function (message) {
-                alert(message);
-            });
-        </script>
-        </body>
-        </html>";
+    <p>Welcome to WebView.</p>
+    <button onclick=""window.external.sendMessage('blah😋')"">Invoke .NET</button>
+    <script>
+        window.external.receiveMessage(function (message) {
+            alert(message);
+        });
+    </script>
+    </body>
+    </html>";
 
     void IncrementCount()
     {
