--- a/sample/MyApplication/WebUI/Pages/Counter.razor
+++ b/sample/MyApplication/WebUI/Pages/Counter.razor
@@ -1,16 +1,21 @@
 ﻿@page "/counter"
+@inject CounterState CounterState
+@implements IDisposable
 
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
+<p>Current count: @CounterState.CurrentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="CounterState.IncrementCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
-
-    private void IncrementCount()
+    protected override void OnInitialized()
     {
-        currentCount++;
+        CounterState.StateChanged += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        CounterState.StateChanged -= StateHasChanged;
     }
 }
