--- a/sample/MyApplication/WebUI/Shared/NavMenu.razor
+++ b/sample/MyApplication/WebUI/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">BlazorApp42</a>
+    <a class="navbar-brand" href="">My Hybrid App</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
