--- a/sample/MessageApp/MessageApp/MessageListPage.xaml
+++ b/sample/MessageApp/MessageApp/MessageListPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="MessageApp.MyRootMasterDetailPageDetail"
+             x:Class="MessageApp.MessageListPage"
              Title="Detail">
   <StackLayout Padding="10">
         <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Master' page with an Icon that references it."/>
