--- a/sample/MessageApp/MessageApp/MessageListPage.xaml
+++ b/sample/MessageApp/MessageApp/MessageListPage.xaml
@@ -3,12 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:b="clr-namespace:BlazorDesktop.Elements;assembly=BlazorDesktop"
              mc:Ignorable="d"
              x:Class="MessageApp.MessageListPage"
              Title="Detail">
-  <StackLayout Padding="10">
+    <StackLayout Padding="10">
         <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Master' page with an Icon that references it."/>
         <Button Text="Navigate in" Clicked="OnMyNavigateClicked" />
-        <WebView Source="http://www.microsoft.com" VerticalOptions="FillAndExpand" />
+
+        <b:WebViewExtended Source="http://www.microsoft.com" VerticalOptions="FillAndExpand" />
+
     </StackLayout>
+
 </ContentPage>
