Render Blazor component directly from xaml

--- a/sample/MessageApp/MessageApp/MessageListPage.xaml
+++ b/sample/MessageApp/MessageApp/MessageListPage.xaml
@@ -11,7 +11,7 @@
         <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Master' page with an Icon that references it."/>
         <Button Text="Navigate in" Clicked="OnMyNavigateClicked" />
 
-        <b:WebViewExtended Source="http://www.microsoft.com" VerticalOptions="FillAndExpand" />
+        <b:BlazorWebView ComponentType="MessageApp.WebUI.Test, MessageApp" VerticalOptions="FillAndExpand" />
 
     </StackLayout>
 
