--- a/sample/MessageApp/MessageApp/WebUI/Test.razor
+++ b/sample/MessageApp/MessageApp/WebUI/Test.razor
@@ -1,1 +1,5 @@
-This is a .razor file
+This is a .razor file with message [@Message]
+
+@code {
+    [Parameter] public string Message { get; set; }
+}
