--- a/sample/MessageApp/MessageApp/WebUI/wwwroot/css/app.css
+++ b/sample/MessageApp/MessageApp/WebUI/wwwroot/css/app.css
@@ -1,110 +1,5 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-a, .btn-link {
-    color: #0366d6;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-app {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-}
-
-.top-row {
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
-
-.main {
-    flex: 1;
-}
-
-    .main .top-row {
-        background-color: #f7f7f7;
-        border-bottom: 1px solid #d6d5d5;
-        justify-content: flex-end;
-    }
-
-        .main .top-row > a, .main .top-row .btn-link {
-            white-space: nowrap;
-            margin-left: 1.5rem;
-        }
-
-.main .top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-}
-
-    .sidebar .top-row {
-        background-color: rgba(0,0,0,0.4);
-    }
-
-    .sidebar .navbar-brand {
-        font-size: 1.1rem;
-    }
-
-    .sidebar .oi {
-        width: 2rem;
-        font-size: 1.1rem;
-        vertical-align: text-top;
-        top: -2px;
-    }
-
-    .sidebar .nav-item {
-        font-size: 0.9rem;
-        padding-bottom: 0.5rem;
-    }
-
-        .sidebar .nav-item:first-of-type {
-            padding-top: 1rem;
-        }
-
-        .sidebar .nav-item:last-of-type {
-            padding-bottom: 1rem;
-        }
-
-        .sidebar .nav-item a {
-            color: #d7d7d7;
-            border-radius: 4px;
-            height: 3rem;
-            display: flex;
-            align-items: center;
-            line-height: 3rem;
-        }
-
-            .sidebar .nav-item a.active {
-                background-color: rgba(255,255,255,0.25);
-                color: white;
-            }
-
-            .sidebar .nav-item a:hover {
-                background-color: rgba(255,255,255,0.1);
-                color: white;
-            }
-
-.content {
-    padding-top: 1.1rem;
-}
-
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
@@ -136,48 +31,133 @@ app {
     top: 0.5rem;
 }
 
-@media (max-width: 767.98px) {
-    .main .top-row:not(.auth) {
-        display: none;
-    }
-
-    .main .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .main .top-row a, .main .top-row .btn-link {
-        margin-left: 0;
-    }
+body {
+    font-family: Helvetica, Arial
 }
 
-@media (min-width: 768px) {
-    app {
-        flex-direction: row;
+.folders {
+    background-color: #bbb;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    border-radius: 7px;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #d6d6d6), color-stop(0.4, #c0c0c0), color-stop(1,#a4a4a4));
+    margin: 10px 0 16px 0;
+    font-size: 0px;
+}
+
+    .folders li:hover {
+        background-color: #ddd;
     }
 
-    .sidebar {
-        width: 250px;
-        height: 100vh;
+    .folders li:first-child {
+        border-left: none;
+        border-radius: 7px 0 0 7px;
+    }
+
+    .folders li {
+        font-size: 16px;
+        font-weight: bold;
+        display: inline-block;
+        padding: 0.5em 1.5em;
+        cursor: pointer;
+        color: #444;
+        text-shadow: #f7f7f7 0 1px 1px;
+        border-left: 1px solid #ddd;
+        border-right: 1px solid #888;
+    }
+
+    .folders li {
+        *display: inline !important;
+    }
+    /* IE7 only */
+    .folders .selected {
+        background-color: #444 !important;
+        color: white;
+        text-shadow: none;
+        border-right-color: #aaa;
+        border-left: none;
+        box-shadow: inset 1px 2px 6px #070707;
+    }
+
+.mails {
+    width: 100%;
+    table-layout: fixed;
+    border-spacing: 0;
+    position: relative;
+    border-collapse: collapse;
+}
+
+    .mails thead {
+        font-weight: bold;
+        color: #444;
+        text-shadow: #f7f7f7 0 1px 1px;
+    }
+
+    .mails tbody tr:hover {
+        cursor: pointer;
+        background-color: #68c !important;
+        color: White;
+    }
+
+    .mails th, .mails td {
+        text-align: left;
+        padding: 0.4em 0.3em;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .mails th {
+        padding: 0.4em 0 0.3em 0.7em;
         position: sticky;
         top: 0;
+        background-color: #bbb;
     }
 
-    .main .top-row {
-        position: sticky;
-        top: 0;
+        .mails th:nth-child(1), .mails td:nth-child(1) {
+            width: 20%;
+        }
+
+        .mails th:nth-child(2), .mails td:nth-child(2) {
+            width: 15%;
+        }
+
+        .mails th:nth-child(3), .mails td:nth-child(3) {
+            width: 45%;
+        }
+
+        .mails th:nth-child(4), .mails td:nth-child(4) {
+            width: 15%;
+        }
+
+        .mails th:last-child {
+            border-right: none
+        }
+
+    .mails tr:nth-child(even) {
+        background-color: #EEE;
     }
 
-    .main > div {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
+.viewMail .mailInfo {
+    background-color: #dae0e8;
+    padding: 1em 1em 0.5em 1.25em;
+    border-radius: 1em;
+}
+
+    .viewMail .mailInfo h1 {
+        margin-top: 0.2em;
+        font-size: 130%;
     }
 
-    .navbar-toggler {
-        display: none;
+    .viewMail .mailInfo label {
+        color: #777;
+        font-weight: bold;
+        min-width: 2.75em;
+        text-align: right;
+        display: inline-block;
     }
 
-    .sidebar .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
+.viewMail .message {
+    padding: 0 1.25em;
 }
